# pulse

./: SPECS.md  service simple.drawio
api/: .dockerignore  .env.sample  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  DockerfileMac  Makefile  README.md
api/benchmarks/: k6.js  run.sh
api/configuration/: .gitignore  base.yaml
api/db/: init.sql
api/deploy/: Makefile
api/deploy/env/base/: base.env  deployment.yaml  ingress.yaml  kustomization.yaml  migration.yaml  service.yaml
api/deploy/env/overlays/dev/: dev.env  ingress.yaml  kustomization.yaml
api/deploy/env/overlays/prod/: basic-auth.yaml.enc  ingress.yaml
api/deploy/env/overlays/prod/secrets/: .gitignore  Makefile  basic-auth-tmpl.yaml
api/deploy/manifests/dev/: manupulse_pulstats.yaml
api/deploy/manifests/prod/: basic-auth.enc.yaml  manupulse_pulstats.yaml
api/migrations/: 202010081722_user_session.sql  202010181555_health_data.sql  202010201155_feedback.sql  202010211850_user_interactions.sql  202111271234_notify.sql  202111301234_skip_email.sql  202112012108_report.sql  202112012135_screens.sql  202112031612_screens.sql  202112031615_locale.sql  202112180120_screens.sql  202112232207_screens.sql  202203071900_index_kiosk_location.sql
api/src/: configuration.rs  lib.rs  startup.rs  telemetry.rs
api/src/routes/: errors.rs  health_data.rs  mod.rs  stats.rs  user_session.rs
api/src/stats/: get.rs  mod.rs  updates.rs
api/src/user_session/: crud.rs  errors.rs  health_data.rs  mod.rs
api/tests/api/: health_check.rs  helpers.rs  main.rs  stats.rs  user_session.rs
ui/: Dockerfile  DockerfileSmall  Makefile  README.md  package-lock.json  package.json  rollup.config.js
ui/deploy/: Makefile
ui/deploy/env/base/: base.env  deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
ui/public/: global.css  index.html
ui/src/: App.svelte  Charts.svelte  KioskSelect.svelte  kiosk.ts  stats.ts
(+6 files in other folders)
