[package]
name = "pulstats"
version = "0.1.57"
authors = ["Vincent Serpoul <vincent_serpoul@manulife.com>"]
description = "pulstats"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.release]
publish = false
dev-version = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/main.rs"
name = "pulstats"

[[bin]]
path = "src/bin/migration.rs"
name = "pulstats-migration"

[dependencies]
axum =  { version="^0.4", features = ["headers"] }
serde = "^1.0"
serde_json = "^1.0"
serde-aux = {version = "^3.0"}
thiserror = "^1.0"
eyre = "^0.6"
log = "^0.4"
tracing = "^0.1"
tracing-subscriber = { version="^0.3", features = ["env-filter"] }
tracing-opentelemetry = "^0.16"
opentelemetry = { version = "^0.16", features = ["rt-tokio-current-thread"] }
opentelemetry-zipkin = { version = "^0.14", features = ["reqwest-client"], default-features = false }
tracing-log = "^0.1"
tower = { version = "^0.4", features = ["timeout"] }
tower-http = { version = "^0.2", features = ["trace", "cors", "compression-br"] }
config = { version = "^0.11.0", default-features = false, features = ["yaml"] }
sqlx = { version = "^0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "json", "offline", "chrono", "migrate"] }
chrono = { version = "^0.4", features = ["serde"] }
openssl = { version = "^0.10", features = ["vendored"] }
tokio = { version = "^1.0", features = ["full"] }
tokio-stream = { version = "^0.1", features = ["sync"] }
csv = "1.1"
uuid = { version = "^0.8", features = ["v4", "serde"] }
tracing-bunyan-formatter = "0.3"
futures = "^0.3"

[dev-dependencies]
once_cell = "^1.8.0"
tokio = { version = "^1", features = ["macros"] }
reqwest = { version = "^0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rand = "^0.8"

